--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lodash": "^4.17.13",
     "lru-cache": "^5.1.1",
     "morgan": "^1.9.1",
+    "functional-red-black-tree": "^1.0.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
