--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gohelpfund/insight-api",
   "description": "A Help blockchain REST and WebSocket API Service",
-  "version": "2.8.0",
+  "version": "2.9.4",
   "repository": "git://github.com/gohelpfund/insight-api.git",
   "contributors": [
     {
@@ -39,6 +39,8 @@
     "compression": "^1.7.3",
     "lodash": "^4.17.13",
     "lru-cache": "^5.1.1",
+    "decimal.js": "^10.0.2",
+    "mongodb": "^3.1.10",
     "morgan": "^1.9.1",
     "functional-red-black-tree": "^1.0.1",
     "request": "^2.88.0"
